--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     </script>
     <div id="article">
         <h1>Articles</h1>
+        <h2 id="debugArticle"></h2>
         <h1>Changer le nom</h1>
         <div style="margin-top: 25px;">
             <select name="" id="articleSelect"></select>
